welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:11: error: value tabColor is not a member of Nothing
possible cause: maybe a semicolon is missing before `value tabColor'?
	}tabColor(6)
         ^